# Backend

./: Dockerfile  README.md  connection_manager.py  constants.py  dto.py  errors.py  main.py  pyproject.toml  tracking.py  websocket.py  websocket_server.py  websocket_test.py
.github/workflows/: docker-publish.yml
api/: websocket.py
app/: main.py
app/business/: debug.py  session.py  tracking_update_sender.py  video_frame_consumer.py  video_frame_producer.py
app/config/: constants.py
app/models/: dto.py  errors.py  websocket_status_codes.py
business/: controller.py  session.py  tracker.py  tracking_update_sender.py  video_frame_consumer.py  video_frame_producer.py
business/worker/: tracking.py  worker.py
config/: constants.py
dto/: dto.py
models/: LockableList.py  dto.py  errors.py
tests/: unitTests.py
worker/: tracking.py  worker.py
