[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["oc04amiz <84477717+oc04amiz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.7.0.72"
websockets = "^11.0.1"
pydantic = "^1.10.7"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
