[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["oc04amiz <84477717+oc04amiz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-contrib-python = "^4.8.0.76"
fastapi = "^0.101.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
